--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="skip">Skip</string>
     <string name="get_started">Get Started</string>
     <string name="next">Next</string>
+    <string name="login">Login</string>
 </resources>
