--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="recipes">Recipes</string>
+    <string name="latest_blog_posts">Latest blog posts!</string>
+    <string name="home_greeting">Hello, %1$s</string>
 </resources>
