--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,14 @@
     <string name="account">Account</string>
     <string name="text_placeholder">. . .</string>
     <string name="logout">Logout</string>
+    <string name="back_button_image">Back Button</string>
+    <string name="my_weight">My weight</string>
+    <string name="weight">Weight</string>
+    <string name="height">Height</string>
+    <string name="age">Age</string>
+    <string name="result">Result</string>
+    <string name="gender">Gender</string>
+    <string name="male">Male</string>
+    <string name="female">Female</string>
+    <string name="update">Update</string>
 </resources>
