--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,11 @@
     <string name="english">English</string>
     <string name="indonesian">Bahasa Indonesia</string>
     <string name="privacy_policy">Privacy Policy</string>
+    <string name="dark_theme">Dark Theme</string>
+    <string name="share_app">Share App</string>
+    <string name="contact_us">Contact Us</string>
+    <string name="languages">Languages</string>
+    <string name="help">Help</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
 </resources>
