pembaruan halaman daily calories

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,4 +79,5 @@ Added NutriCatch Profile Terms and Conditions to provide you with seamless exper
 We encourage you to read the entire Privacy Notice, NutriCatch Profile Terms, and Conditions for more information and to provide your consent by clicking the “Accept All” button below.\n
 \n
 Thank you for your trust and continued support of NutriCatch!</string>
+    <string name="calories">Calories</string>
 </resources>
