added register button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,4 +80,5 @@ We encourage you to read the entire Privacy Notice, NutriCatch Profile Terms, an
 \n
 Thank you for your trust and continued support of NutriCatch!</string>
     <string name="calories">Calories</string>
+    <string name="remember_me">Remember Me</string>
 </resources>
