--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,25 +3,16 @@
     <string name="onboard_headline_1">Get the exact nutrition value of everything you eat</string>
     <string name="onboard_body_1">We are updating our food database every minute to help you track you calories.</string>
     <string name="onboard_headline_2">Get all the healthy recipes that you need</string>
-    <string name="onboard_body_2">Whether you are losing or gaining, we have all recipes you’ll need.</string>
+    <string name="onboard_body_2">Whether you are losing or gaining, we have all recipes you’ll need</string>
     <string name="onboard_headline_3">Get daily calorie targets based on your body weight</string>
-    <string name="onboard_body_3">Set you target weight and select your monthly schedule, and we’ll do the rest.</string>
+    <string name="onboard_body_3">Set you target weight and select your monthly schedule, and we’ll do the rest</string>
     <string name="skip">Skip</string>
     <string name="get_started">Get Started</string>
     <string name="next">Next</string>
     <string name="login">Login</string>
     <string name="register">Register</string>
-    <string name="title_activity_home">HomeActivity</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
-    <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
     <string name="title_home">Home</string>
     <string name="title_history">History</string>
     <string name="title_setting">Setting</string>
@@ -31,7 +22,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="recipes">Recipes</string>
-    <string name="latest_blog_posts">Latest blog posts!</string>
     <string name="home_greeting">Hello, %1$s</string>
     <string name="profile">Profile</string>
     <string name="account">Account</string>
@@ -56,8 +46,6 @@
     <string name="contact_us">Contact Us</string>
     <string name="languages">Languages</string>
     <string name="help">Help</string>
-    <string name="dummy_button">Dummy Button</string>
-    <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="great_day_to_control_your_calories">Great day to control your calories!</string>
     <string name="we_ve_picked_you_a_delicious_food">We\'ve picked you a delicious food</string>
     <string name="we_also_have_recipe_for_you">We also have recipe for you</string>
