added locale language feature

--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -71,5 +71,5 @@ Thank you for your trust and continued support of NutriCatch!</string>
     <string name="calories">Kalori</string>
     <string name="remember_me">Ingat Saya</string>
     <string name="scan_result">Hasil Pindai</string>
-    <string name="delet_account">Ajukan Penghapusan Akun</string>
+    <string name="delet_account">Request For Account Deletion</string>
 </resources>
