added update user data functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,4 +72,10 @@ Thank you for your trust and continued support of NutriCatch!</string>
     <string name="scan_result">Scan result</string>
     <string name="delet_account">Request For Account Deletion</string>
     <string name="cancel">Cancel</string>
+    <string name="underweight">Underweight</string>
+    <string name="extremely_overweight">Extremely Overweight</string>
+    <string name="slightly_underweight">Slightly Underweight</string>
+    <string name="overweight">Overweight</string>
+    <string name="slightly_overweight">Slightly Overweight</string>
+    <string name="success_update_data">Success update data</string>
 </resources>
