--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,4 +82,6 @@ Thank you for your trust and continued support of NutriCatch!</string>
     <string name="track_your_calories_journey2">Calories Journey</string>
     <string name="or">or</string>
     <string name="login_with_google">Login With Google</string>
+    <string name="share_nutricatch">Share NutriCatch</string>
+    <string name="share_nutricatch_content">Let's invite your friends to try NutriCatch so they can also feel the pleasure of being helped to control their daily food intake with NutriCatch.</string>
 </resources>
