--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,4 +82,6 @@ Thank you for your trust and continued support of NutriCatch!</string>
     <string name="track_your_calories_journey2">Calories Journey</string>
     <string name="or">or</string>
     <string name="login_with_google">Login With Google</string>
+    <string name="delicious_food_only_for_you">Delicious food, only for you 😉</string>
+    <string name="map_view">Map View</string>
 </resources>
