--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,4 +92,8 @@ Thank you for your trust and continued support of NutriCatch!</string>
     <string name="enter_your_name">Enter Your Name</string>
     <string name="enter_your_email">Enter Your Email</string>
     <string name="message">Message</string>
+    <string name="getting_your_location">getting your current location</string>
+    <string name="must_activate_gps">You must activate gps to use this feature . . .</string>
+    <string name="cannot_get_location">Tidak dapat mengambil lokasi</string>
+    <string name="location_retrieved">Berhasil mendapatkan lokasi</string>
 </resources>
