--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -92,4 +92,12 @@ Thank you for your trust and continued support of NutriCatch!</string>
     <string name="enter_your_name">Masukkan Nama</string>
     <string name="enter_your_email">Masukkan Email</string>
     <string name="message">Pesan</string>
+    <string name="getting_your_location">Mendapatkan lokasimu</string>
+    <string name="must_activate_gps">"Kamu harus mengaktifkan "</string>
+    <string name="cannot_get_location">Tidak dapat mengambil lokasi</string>
+    <string name="location_retrieved">Berhasil mendapatkan lokasi</string>
+    <string name="no">TIDAK</string>
+    <string name="yes">YA</string>
+    <string name="confirmation_text">Wow, terlihat enak! Apakah ini %1$s?</string>
+    <string name="yes_i_ate_this">YTa, saya makan ini!</string>
 </resources>
